[package]
name = "unique_assets"
version = "0.1.0"
authors = ["Jay Butera <buterajay@protonmail.com>"]
edition = "2018"

[dependencies.frame-support]
default-features = false
#git = 'https://github.com/paritytech/substrate.git'
git = 'https://github.com/centrifuge/substrate.git'
rev = '7f5382862e1f47875f05a5e7ad6219d694ffbc69'
version = '2.0.0-rc6'

[dependencies.sp-std]
default-features = false
#git = 'https://github.com/paritytech/substrate.git'
git = 'https://github.com/centrifuge/substrate.git'
rev = '7f5382862e1f47875f05a5e7ad6219d694ffbc69'
version = '2.0.0-rc6'

[features]
default = [ "std" ]
std = [
    "frame-support/std",
    "sp-std/std",
]
