[package]
name = "unique_assets"
version = "0.1.0"
authors = ["Jay Butera <buterajay@protonmail.com>"]
edition = "2018"

[dependencies]
frame-support = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { branch = "rococo-v1", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[features]
default = [ "std" ]
std = [
    "frame-support/std",
    "sp-std/std",
]
